start to migrate old site layout

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 title:       Nova Patch
 email:       nova.patch@gmail.com
-description: Languages and writing systems, botany and mycology, open science and open data.
+description: Personal website of Nova Patch, with writing, research, talks, and projects.
 baseurl:     ""
 url:         https://novapatch.ie
 github:      patch
